<resources>
    <string name="app_name">PAHRM</string>
    <string name="Forgot_me">forgot Password?</string>
    <string name="task1">You started task at</string>
    <string name="endtask1">Roster Tracking</string>
    <string name="text2">You can press END button when you done your work</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="welcome">My Dashboard</string>
    <string name="MyProfile">Profile</string>
    <string name="payment">Payments</string>
    <string name="date" />
    <string name="safety">Report Safety Incident</string>
    <string name="logout">Sign Out</string>
    <string name="jobPool">Job Pool</string>
    <string name="roster">Roster</string>
    <string name="resourses">Resources</string>
    <string name="contactus">Contact Us</string>
    <string name="Name">Name</string>
    <string name="eName">Employee Name</string>
    <string name="profile">My Profile</string>
    <string name="Password">Password</string>
    <string name="email">Email</string>
    <string name="contact">Contact Number</string>
    <string name="edit">Edit</string>
    <string name="change_password">Change Password</string>
    <string name="CPassword">Current Password</string>
    <string name="NPassword">New Password</string>
    <string name="CmPassword">Comfirm Password</string>
    <string name="change">Change</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="eid">Employee ID</string>
    <string name="dob">Date of birth</string>
    <string name="country">Country</string>
    <string name="nic">NIC/Drivers License</string>
    <string name="available">Avilability</string>
    <string name="viewProfile">View My Profile</string>
    <string name="Report">Report Safty Incident</string>
    <string name="leave">Leave Request</string>
    <string name="report_txt">Fill the details and click "Submit" to report an incident at your workplace</string>
    <string name="submit">Submit</string>
    <string name="report_txt2">Does this incident involve you?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="incident_date">Date of incident</string>
    <string name="time">Time of incident</string>
    <string name="location">Location</string>
    <string name="detail">Discribe the incident</string>
    <string name="resource">Resources</string>
    <string name="myroster">My Roster</string>
    <string name="viewLocation">View Location</string>
    <string name="more">More Options</string>
    <string name="info">Personal Info</string>
    <string name="tel">Mobile Number</string>
    <string name="EmployeeInfo">Employment Info</string>
    <string name="Cname">Company Name</string>
    <string name="paycycle">Pay Cycle</string>
    <string name="rosterHistory">Roster History</string>
    <string name="paymentHistory">Payment History</string>
    <string name="history">History</string>
    <string name="assign">Assigned Tasks</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="txt">Mark your attendance from here</string>
    <string name="atnd">Record Your Work</string>
    <string name="half">Half-Day</string>
    <string name="news">News Feed</string>
    <string name="rsign">Resign</string>
    <string name="Channelname">Channel name</string>
    <string name="channel_description">channel_description</string>

</resources>
