<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/mb3"
    android:padding="10dp">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#FFFFFF"
        android:gravity="top"
        android:padding="10dp">


        <!--Email_Id-->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/contactus" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/report_txt"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_txt2"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </TableRow>


        <!--Password-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/date1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="@android:color/black">

                <EditText
                    android:id="@+id/date2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/incident_date"
                    android:inputType="date" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/time1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="@android:color/black">

                <EditText
                    android:id="@+id/time2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/time"
                    android:inputType="time" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/location1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="@android:color/black">

                <EditText
                    android:id="@+id/location2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="16"
                    android:hint="@string/location"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColorHint="@color/black" />
            </android.support.design.widget.TextInputLayout>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/detail1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="@android:color/black">

                <EditText
                    android:id="@+id/detail2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="16"
                    android:hint="@string/detail"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:textColorHint="@color/black" />
            </android.support.design.widget.TextInputLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="120dp"
                android:background="@drawable/start_end"
                android:text="@string/submit"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:typeface="serif" />
        </TableRow>


    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/Report"
        android:textColor="@color/Dblue"
        android:textSize="30sp"
        android:typeface="serif" />


</RelativeLayout>
